# resumec

./: LICENSE  README.md  main.py  pyproject.toml
cvs/: 2026-02-22_Software_Engineer_Tech_Corp.md
data/: raw_cv.md
resumec/: cli.py  config.py
resumec/pipeline/: orchestrator.py
resumec/pipeline/enrich/: classify_project.py  extract_keywords.py
resumec/pipeline/generate/: llm_client.py  prompts.py  rewrite_cv.py
resumec/pipeline/ingest/: job_fetcher.py  rawcv_loader.py  repo_crawler.py
resumec/pipeline/match/: scorer.py  selector.py
resumec/pipeline/normalize/: job_parser.py  person_parser.py  repo_parser.py
resumec/pipeline/persist/: save_cv.py
resumec/pipeline/render/: markdown_renderer.py
resumec/pipeline/validate/: repair.py  rules.py
resumec/schemas/: cv.py  job.py  person.py  repo.py
resumec/templates/: swe.md.jinja
resumec/utils/: retry.py
